# ai-build-hackathon

./: .env.sample  .gitignore  README.md  pyproject.toml
backend/: README.md  choose_philosophy.py  diagnostician.py  eastern_guru.py  end_agent.py  existentialist.py  happiness.py  main.py  prescriber.py  state.py  stoic.py  stoic_tutor.py
frontend/: PhilosophersConponent.js  README.md  package-lock.json  package.json
frontend/lib/: useOwnModelTrigger.ts  utils.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/components/: sidebar.tsx
frontend/src/components/chat/: chat-bottombar.tsx  chat-layout.tsx  chat-list.tsx  chat-topbar.tsx  chat.tsx  styles.css
